--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "private": true,
   "name": "purescript-nodemailer",
   "scripts": {
+    "postinstall": "bower install",
     "clean": "rm -rf output",
-    "bower:install": "bower install",
     "pulp:build": "pulp build",
     "pulp:test": "pulp test",
+    "pulp:login": "pulp login",
     "pulp:version": "pulp version",
     "pulp:publish": "pulp publish"
   },
   "devDependencies": {
-    "bower": "^1.8.2",
-    "pulp": "^12.0.1",
-    "purescript": "^0.11.6"
+    "bower": "^1.8.4",
+    "pulp": "^12.2.0",
+    "purescript": "^0.12.0"
   },
   "dependencies": {
-    "nodemailer": "^4.3.1"
+    "nodemailer": "^4.6.5"
   }
 }
