--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,9 @@
     "purescript-aff": "^5.0.0"
   },
   "devDependencies": {
-    "purescript-node-process": "^6.0.0"
+    "purescript-node-process": "^6.0.0",
+    "purescript-console": "^4.2.0",
+    "purescript-node-fs-aff": "^6.0.0",
+    "purescript-simple-json": "^4.2.0"
   }
 }
