--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "bower": "^1.8.8",
     "pulp": "^13.0.0",
-    "purescript": "^0.13.0"
+    "purs-bin-simple": "^0.3.0"
   },
   "dependencies": {
     "nodemailer": "^6.2.1"
