--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "bower": "^1.8.8",
-    "pulp": "^13.0.0",
     "nodemailer": "^6.3.0",
-    "purescript": "^0.13.3"
+    "pulp": "^14.0.0",
+    "purescript": "^0.13.6",
+    "purescript-psa": "^0.7.3"
   }
 }
