--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/oreshinya/purescript-nodemailer.git"
+    "url": "https://github.com/oreshinya/purescript-nodemailer"
   },
   "moduleType": [
     "node"
