--- a/bower.json
+++ b/bower.json
@@ -1,36 +1,27 @@
 {
-  "name": "purescript-nodemailer",
-  "license": "MIT",
-  "homepage": "https://github.com/oreshinya/purescript-nodemailer",
-  "authors": [
-    "Shinya Takahashi <s.takahashi313@gmail.com>"
-  ],
-  "description": "Bindings nodemailer for PureScript",
-  "keywords": [
-    "purescript",
-    "mailer",
-    "nodemailer"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/oreshinya/purescript-nodemailer"
-  },
-  "moduleType": [
-    "node"
-  ],
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "output"
-  ],
-  "dependencies": {
-    "purescript-aff": "^7.1.0",
-    "purescript-simple-json": "^9.0.0",
-    "purescript-node-streams": "^7.0.0"
-  },
-  "devDependencies": {
-    "purescript-console": "^6.0.0",
-    "purescript-node-fs": "^8.1.0"
-  }
+    "name": "purescript-nodemailer",
+    "license": [
+        "MIT"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/oreshinya/purescript-nodemailer"
+    },
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "output"
+    ],
+    "dependencies": {
+        "purescript-aff": "^v7.1.0",
+        "purescript-effect": "^v4.0.0",
+        "purescript-foreign": "^v7.0.0",
+        "purescript-functions": "^v6.0.0",
+        "purescript-maybe": "^v6.0.0",
+        "purescript-node-streams": "^v7.0.0",
+        "purescript-prelude": "^v6.0.1",
+        "purescript-simple-json": "^v9.0.0",
+        "purescript-unsafe-coerce": "^v6.0.0"
+    }
 }
